--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
 		"request-progress": "^3.0.0",
 		"request-promise-native": "^1.0.8",
 		"semver": "^7.5.2",
+		"unix-dgram-socket": "^1.1.1",
 		"vscode-languageclient": "^8.1.0"
 	},
 	"devDependencies": {
