--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es6",
+		"module": "commonjs", // Use ESNext for ES module support
+		"target": "ES6", // Use ESNext for the latest ECMAScript features
+		"moduleResolution": "node", // Use Node.js module resolution
 		"outDir": "out",
-		"lib": [
-			"es6"
-		],
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
+		"strict": true, /* enable all strict type-checking options */
+		"esModuleInterop": true, // Enable interoperability between CommonJS and ES modules
+		"allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export
+		"forceConsistentCasingInFileNames": true
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
