--- a/package.json
+++ b/package.json
@@ -222,16 +222,17 @@
 	"dependencies": {
 		"axios": "^1.7.7",
 		"decompress": "^4.2.1",
-		"proxy-agent": "^6.4.0",
 		"node-unix-socket": "^0.2.7",
+		"proxy-agent": "^6.4.0",
 		"request": "^2.88.2",
 		"request-progress": "^3.0.0",
 		"semver": "^7.6.3",
+		"unix-dgram": "^2.0.6",
 		"vscode-languageclient": "^8.1.0"
 	},
 	"devDependencies": {
 		"@types/decompress": "^4.2.1",
-		"@types/node": "^22.7.9",
+		"@types/node": "^22.9.0",
 		"@types/request-promise-native": "^1.0.17",
 		"@types/semver": "^7.3.5",
 		"@types/vscode": "^1.67.0",
