--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
 		"strict": true, /* enable all strict type-checking options */
 		"esModuleInterop": true, // Enable interoperability between CommonJS and ES modules
 		"allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"typeRoots": [
+			"./types",
+			"./node_modules/@types"
+		]
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
